force-app/main/default/objects/RoutingParameterOverride__mdt/RoutingParameterOverride__mdt.object-meta.xml
<CustomObject>
    <label>Routing Parameter Override</label>
    <pluralLabel>Routing Parameter Overrides</pluralLabel>
</CustomObject>