force-app/main/default/objects/RoutingParameterOverride__mdt/fields/AddExtraRoute__c.field-meta.xml
<CustomField>
    <fullName>AddExtraRoute__c</fullName>
    <description>Allow system to add an extra route so not to exceed TargetTime.</description>
    <label>Add Extra Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>