force-app/main/default/objects/RoutingParameterOverride__mdt/fields/BeginEndRouteTimeAtFacility__c.field-meta.xml
<CustomField>
    <fullName>BeginEndRouteTimeAtFacility__c</fullName>
    <description>When on, include pre and post time as part of the max length of the day, effectively shortening the length of the day and start time is unaffected. When off, the pre and post time do not impact the max length of day. The pre time would move the start time to earlier than the facility start time.</description>
    <label>Begin End Route Time At Facility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>