force-app/main/default/objects/RoutingParameterOverride__mdt/fields/EndDepotIndex__c.field-meta.xml
<CustomField>
    <fullName>EndDepotIndex__c</fullName>
    <description>Ending location of routes.</description>
    <label>End Depot Index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>