force-app/main/default/objects/RoutingParameterOverride__mdt/fields/GenerateMethod__c.field-meta.xml
<CustomField>
    <fullName>GenerateMethod__c</fullName>
    <description>Solver method for how to create routes, either on time or by a fixed number.</description>
    <label>Generate Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>