force-app/main/default/objects/RoutingParameterOverride__mdt/fields/IncludeMeanderPenalty__c.field-meta.xml
<CustomField>
    <fullName>IncludeMeanderPenalty__c</fullName>
    <description>Minimize meandering service along a street segment based on street category, density of service locations, and travel direction.</description>
    <label>Include Meander Penalty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>