force-app/main/default/objects/RoutingParameterOverride__mdt/fields/IncludeRoutePreparationTime__c.field-meta.xml
<CustomField>
    <fullName>IncludeRoutePreparationTime__c</fullName>
    <description>Accounts for pre- and post- route activities within the total route time.</description>
    <label>Include Route Preparation Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>