force-app/main/default/objects/RoutingParameterOverride__mdt/fields/LoopParkOption__c.field-meta.xml
<CustomField>
    <fullName>LoopParkOption__c</fullName>
    <description>Influence where your park points should be located, either at the first street encountered for a loop, or in the middle of the service streets on a loop.</description>
    <label>Loop Park Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Traditional park point selection method, which is somewhat random</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Encourage parking in the middle of the service streets</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Encourage parking at the first service street</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>