force-app/main/default/objects/RoutingParameterOverride__mdt/fields/MaxAllowableWalkingTimeBetweenComponents__c.field-meta.xml
<CustomField>
    <fullName>MaxAllowableWalkingTimeBetweenComponents__c</fullName>
    <description>Max Walking - maximum travel time allowed between blockfaces with service (Maximum Allowable Walking Time Between Components) where a component is a connected set of streets that all have service.</description>
    <label>Max Allowable Walk Time b/w Components</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>