force-app/main/default/objects/RoutingParameterOverride__mdt/fields/MaxLoopDemand__c.field-meta.xml
<CustomField>
    <fullName>MaxLoopDemand__c</fullName>
    <description>Maximum total demand of a single walking loop. Walking loop capacity.</description>
    <label>Max Loop Demand</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>