force-app/main/default/objects/RoutingParameterOverride__mdt/fields/MaxLoopTime__c.field-meta.xml
<CustomField>
    <fullName>MaxLoopTime__c</fullName>
    <description>Maximum total time for a single walking loop.</description>
    <label>Max Loop Time</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>