force-app/main/default/objects/RoutingParameterOverride__mdt/fields/MaxRouteTime__c.field-meta.xml
<CustomField>
    <fullName>MaxRouteTime__c</fullName>
    <description>Max duration of route.</description>
    <label>Max Route Time</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>