force-app/main/default/objects/RoutingParameterOverride__mdt/fields/MixedMode__c.field-meta.xml
<CustomField>
    <fullName>MixedMode__c</fullName>
    <description>Use MixedMode routing (both Driving and Walking).</description>
    <label>Mixed Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>