force-app/main/default/objects/RoutingParameterOverride__mdt/fields/NumberOfDemandFields__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDemandFields__c</fullName>
    <description>Number of Demand fields in use.</description>
    <label>Number of Demand fields in use</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>