force-app/main/default/objects/RoutingParameterOverride__mdt/fields/NumberOfRoutes__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRoutes__c</fullName>
    <description>Desired number of routes to create.</description>
    <label>Number of Routes to create</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>