force-app/main/default/objects/RoutingParameterOverride__mdt/fields/ParkAndLoop__c.field-meta.xml
<CustomField>
    <fullName>ParkAndLoop__c</fullName>
    <description>Create walking loops and park points within routes.</description>
    <label>Park And Loop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>