force-app/main/default/objects/RoutingParameterOverride__mdt/fields/PickupCapacityPercentage__c.field-meta.xml
<CustomField>
    <fullName>PickupCapacityPercentage__c</fullName>
    <description>Use when a pickup/removal takes up more capacity than a drop-off/delivery.</description>
    <label>Pickup Capacity Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>