force-app/main/default/objects/RoutingParameterOverride__mdt/fields/PickupDeliveryNumberStacked__c.field-meta.xml
<CustomField>
    <fullName>PickupDeliveryNumberStacked__c</fullName>
    <description>Number of deliveries that must be completed before a removal can be serviced when the vehicle leaves the yard full.</description>
    <label>Pickup Delivery Number Stacked</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>