force-app/main/default/objects/RoutingParameterOverride__mdt/fields/PostEndTime__c.field-meta.xml
<CustomField>
    <fullName>PostEndTime__c</fullName>
    <description>The amount of time (in seconds) spent at the end of the route performing route-related activities.
*Note that this must be enabled with a different setting (enablePostEndTime 0 = off 1= on).</description>
    <label>Post End Time</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>