force-app/main/default/objects/RoutingParameterOverride__mdt/fields/PreStartTime__c.field-meta.xml
<CustomField>
    <fullName>PreStartTime__c</fullName>
    <description>The amount of time (in seconds) spent at the beginning of the route performing route-related activities
*Note that this must be enabled with a different setting (enablePreStartTime 0 = off 1 = on).</description>
    <label>Pre Start Time</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>