force-app/main/default/objects/RoutingParameterOverride__mdt/fields/RouteNumberIncrement__c.field-meta.xml
<CustomField>
    <fullName>RouteNumberIncrement__c</fullName>
    <description>Amount to increment each subsequent route value.</description>
    <label>Route Number Increment</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>