force-app/main/default/objects/RoutingParameterOverride__mdt/fields/SequenceGap__c.field-meta.xml
<CustomField>
    <fullName>SequenceGap__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Value to increment between each Sequence value for Service Locations.</description>
    <label>Sequence Gap</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>