force-app/main/default/objects/RoutingParameterOverride__mdt/fields/SequenceStart__c.field-meta.xml
<CustomField>
    <fullName>SequenceStart__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Starting value for first sequenced record on each route.</description>
    <label>Sequence Start</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>