force-app/main/default/objects/RoutingParameterOverride__mdt/fields/SolutionLabel__c.field-meta.xml
<CustomField>
    <fullName>SolutionLabel__c</fullName>
    <description>Solution label or description.</description>
    <label>Solution Label</label>
    <length>30</length>
    <type>Text</type>
</CustomField>