force-app/main/default/objects/RoutingParameterOverride__mdt/fields/SolutionName__c.field-meta.xml
<CustomField>
    <fullName>SolutionName__c</fullName>
    <description>Solution name.</description>
    <label>Solution Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>