force-app/main/default/objects/RoutingParameterOverride__mdt/fields/Solver__c.field-meta.xml
<CustomField>
    <fullName>Solver__c</fullName>
    <description>Call one of the RouteSmart optimisation solvers.</description>
    <label>Solver</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generate New Routes</fullName>
            </value>
            <value>
                <fullName>Generate And Sequence New Routes</fullName>
            </value>
            <value>
                <fullName>Sequence Existing Routes</fullName>
            </value>
            <value>
                <fullName>Insert onto Existing Routes</fullName>
            </value>
            <value>
                <fullName>Evaluate Existing Routes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>