force-app/main/default/objects/RoutingParameterOverride__mdt/fields/StartDepotIndex__c.field-meta.xml
<CustomField>
    <fullName>StartDepotIndex__c</fullName>
    <description>Starting location of routes.</description>
    <label>Start Depot Index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>