force-app/main/default/objects/RoutingParameterOverride__mdt/fields/StartRouteNumber__c.field-meta.xml
<CustomField>
    <fullName>StartRouteNumber__c</fullName>
    <description>Number to begin assigning route values.</description>
    <label>Start Route Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>