force-app/main/default/objects/RoutingParameterOverride__mdt/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>Start time of routes.</description>
    <label>Start Time</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>