force-app/main/default/objects/RoutingParameterOverride__mdt/fields/TargetTime__c.field-meta.xml
<CustomField>
    <fullName>TargetTime__c</fullName>
    <description>Defines how long you want each of the generate routes to be.</description>
    <label>Target Time</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>