force-app/main/default/objects/RoutingParameterOverride__mdt/fields/UseBlockSequence__c.field-meta.xml
<CustomField>
    <fullName>UseBlockSequence__c</fullName>
    <description>If set to “True”, service locations on the same blockface will be sequenced in a predetermined sequence relative to the direction of travel. This setting uses the values sepecified in the service location blockSeq attribute.</description>
    <label>Use Block Sequence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>