force-app/main/default/objects/RoutingParameterOverride__mdt/fields/UseBuilding__c.field-meta.xml
<CustomField>
    <fullName>UseBuilding__c</fullName>
    <description>The Use building-number sequence setting ensures that units within one building on a blockface will be serviced before units in other buildings on that blockface when the buildings share the same location (X, Y coordinates). If this option is chosen and you have populated the [Building] field with either a building number or a preferred sequence, stops with the same coordinates will be grouped by their building value and the buildings will be sequenced in the specified order.</description>
    <label>Use Building</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>