force-app/main/default/objects/RoutingParameterOverride__mdt/fields/UseExtraDistance__c.field-meta.xml
<CustomField>
    <fullName>UseExtraDistance__c</fullName>
    <description>When enabled we use the values defined in the SL layer for the extraDistance attribute when calculating service time for a route. Ex: Additional distance may be added for records with vertical distance such as an apartment bldg.</description>
    <label>Use Extra Distance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>