force-app/main/default/objects/RoutingParameterOverride__mdt/fields/UseExtraTime__c.field-meta.xml
<CustomField>
    <fullName>UseExtraTime__c</fullName>
    <description>When enabled we use the values defined in the SL layer for the extraTime attribute when calculating service time for a route. Ex: Additional Time may be added for record with long driveways or complicated delivery hindrances.</description>
    <label>Use Extra Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>