force-app/main/default/objects/RoutingParameterOverride__mdt/fields/UseFixedUnitSequence__c.field-meta.xml
<CustomField>
    <fullName>UseFixedUnitSequence__c</fullName>
    <description>Ensures that all points with the same coordinates follow a preset sequence (apartment buildings, offices, trailer parks).</description>
    <label>Use Fixed Unit Sequence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>