force-app/main/default/objects/RoutingParameterOverride__mdt/fields/UsePickupDeliveryCapacity__c.field-meta.xml
<CustomField>
    <fullName>UsePickupDeliveryCapacity__c</fullName>
    <description>Solver would make decisions during the sequence for delivering or picking up based on the active capacity count instead of waiting for capacity to be full before deciding to end the sequence or empty. Used for bin delivery and pickup.</description>
    <label>Use Pickup Delivery Capacity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>