force-app/main/default/objects/RoutingParameterOverride__mdt/fields/UsePreparationTime__c.field-meta.xml
<CustomField>
    <fullName>UsePreparationTime__c</fullName>
    <description>When enabled, we will use the values defined in the Service Location prepTime attribute. Unlike pre and post start/end times, the prepTime value is at the service location level and not at the route level.</description>
    <label>Use Preparation Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>