force-app/main/default/objects/RoutingParameterOverride__mdt/fields/UseRegions__c.field-meta.xml
<CustomField>
    <fullName>UseRegions__c</fullName>
    <description>When enabled, we will use the values defined in the Service Location Region attribute, where regions can be divided into multiple routes, but routes cannot cross into (or pull from) other regions when balancing service locations. Ex: Set this property and updated Region with Postal Code to prevent SL records from more than one Postal Code to be assigned to the same route.</description>
    <label>Use Regions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>