force-app/main/default/objects/RoutingParameterOverride__mdt/fields/UseSectors__c.field-meta.xml
<CustomField>
    <fullName>UseSectors__c</fullName>
    <description>Enables/disables the use of sectors which groups small collections of service locations that must be kept together when creating a route. A route may contain multiple sectors. Sectors are often used to keep neighborhoods together.</description>
    <label>Use Sectors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>