force-app/main/default/objects/RoutingParameterOverride__mdt/fields/UseSpecialties__c.field-meta.xml
<CustomField>
    <fullName>UseSpecialties__c</fullName>
    <description>Option to consider Specialties during optimization.</description>
    <label>Use Specialties</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>