force-app/main/default/objects/RoutingParameterOverride__mdt/fields/UseZonePriority__c.field-meta.xml
<CustomField>
    <fullName>UseZonePriority__c</fullName>
    <description>Determines whether or not we read/utilize Zone Type and/or Zone Priority values to direct the sequence of your routes.</description>
    <label>Use Zone Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>