force-app/main/default/objects/RoutingParameterOverride__mdt/validationRules/RequireGenerateMethod.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireGenerateMethod</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CONTAINS(TEXT(Solver__c), &apos;Generate&apos;), ISBLANK(TEXT(GenerateMethod__c)))</errorConditionFormula>
    <errorDisplayField>GenerateMethod__c</errorDisplayField>
    <errorMessage>Generate Method is required to generate new routes.</errorMessage>
</ValidationRule>