force-app/main/default/objects/RoutingParameterOverride__mdt/validationRules/RestrictMaxRouteTimeFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictMaxRouteTimeFormat</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(MaxRouteTime__c, &apos;[0-2][0-9]:[0-5][0-9]&apos;))</errorConditionFormula>
    <errorDisplayField>MaxRouteTime__c</errorDisplayField>
    <errorMessage>Max Route Time must be in the 24hr format HH:MM.</errorMessage>
</ValidationRule>